Fix of logout button (added  rem units and changed sizing and bolding so it doesn't wrap at around 1200px screen size.

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -57,7 +57,7 @@ nav.navbar {  /* makes the navbar text slightly smaller than default and give pa
 }
 /* End navigation menu styles */
 .logout {
-    padding: .12rem .25rem;
+    padding: 0 .25rem;
     font-size: .85rem;
     position: relative;
     font-family: Arial narrow, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
@@ -307,8 +307,8 @@ input#Password {
 		text-align: right;
 	}
 	.logout {
-		padding: .25em .45em;
-		font-size: .83em;
+		padding: .2rem .45rem;
+		font-size: .85rem;
 /*		font-weight: bold;*/
 		position: absolute;
 		right: 1rem;
@@ -438,12 +438,12 @@ input#Password {
 	.logout {
 		padding: .12rem .45rem;
 		font-size: .73rem;
-		font-weight: bold;
+/*		font-weight: bold;*/
 		position: absolute;
 		right: .25rem;
 		font-family: Arial narrow, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
 		letter-spacing: .02rem;
-/*		margin-right:.25rem;*/
+		margin-right:.25rem;
 	}
 	.login-form {
 		width: 320px;
